@@ -16,3 +16,4 @@ oracle              Working
 iptc                Working
 informix            Working
 zlib                Working
+sysvshm				Working
