@@ -2,6 +2,7 @@ PHP 4.0 CHANGE LOG                                                    ChangeLog
 |||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
 
 ??? ?? 1999, Version 4.0 Beta 2
+- fixed SYSV-SHM interface (Thies).
 - updated hyperwave module, made it thread safe
 - updated pdflib module, version 0.6 of pdflib no longer supported
 - updated fdf module
